--- a/tensorflow/tools/docker/Dockerfile.devel-gpu
+++ b/tensorflow/tools/docker/Dockerfile.devel-gpu
@@ -63,6 +63,9 @@ RUN pip --no-cache-dir install \
         scipy \
         sklearn \
         pandas \
+	imageio \
+	scikit-image \
+	scikit-learn \
         && \
     python -m ipykernel.kernelspec
 
